[package]
name = "stepmom"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
poise = "0.6.1"
serde = "1.0.215"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.13.0"
